# final_poc

./: .env  .env.example  .gitignore  internship.txt  main.py  project_contents.txt  project_dump.txt  project_dump_clean.txt  pyproject.toml  superowl_poc_complete_dump.txt  superowl_test.db
app/core/: config.py  database.py
app/models/: __init__.py  business.py  call_log.py  prompt_template.py
app/routers/: businesses.py  onboarding.py  playground.py  prompts.py  slack_actions.py  slack_events.py  trigger.py  vapi_webhook.py
app/schemas/: business.py
app/services/: call_orchestrator.py  groq_service.py  nango_service.py  prompt_builder.py  slack_service.py  vapi_service.py
data/: businesses.json  call_logs.json  prompts.json
frontend/: index.html
tests/: conftest.py
